[package]
name = "slop_survivors"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "Dragon-themed survivors-like (Vampire Survivors style) built with Bevy"
license = "MIT OR Apache-2.0"
repository = ""
keywords = ["bevy", "game", "survivors", "dragon"]
categories = ["games"]

[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "z"
strip = true

[dependencies]
# Target Bevy 0.13 (stable) – adjust if you later move to 0.14/0.15+.
bevy = { version = "0.13" }
getrandom = { version = "0.3.3", features = ["wasm_js"] }
rand = "0.9.2"

uuid = { version = "1.13.1", default-features = false, features = ["js"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
	"Window",
	"Document",
	"HtmlCanvasElement",
	"CssStyleDeclaration",
] }

[dev-dependencies]
# Temporarily disabled until matching version picked (to re-enable, pick a bevy-inspector-egui version compatible with Bevy 0.13, e.g. ~0.22)
# bevy-inspector-egui = "0.22"

[features]
# Enable faster builds during dev by disabling audio & others if desired later
# default = []

# You can optionally define a "web" feature to trim unsupported features on wasm:
# [features]
# web = []

[patch.crates-io]
# (Optional) Place for temporary Bevy git patches if you need bleeding edge:
# bevy = { git = "https://github.com/bevyengine/bevy", rev = "<commit>" }
